punctuation and spelling

--- a/cosyne_2022_computational_and_systems_neuroscience_in_review.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_in_review.html
@@ -138,14 +138,14 @@
       <div class="col-lg-11" style=" margin-left: 50px;">
         <div style="font-size:19px">
 
-        &emsp; In Cosyne 2022's keynote talk Robert Datta said that since he got tenure 🎉 he could engage in some wild speculation. This is a great rule to have! That being said, I most certainly do not have tenure, but I'm still going to take a swing 😃
+        &emsp; In Cosyne 2022's keynote talk, Robert Datta said that since he got tenure 🎉 he could engage in some wild speculation. This is a great rule to have! That being said, I most certainly do not have tenure, but I'm still going to take a swing 😃
         <br><br>
 
         &emsp; Before I dive in, let me explain what this <b><i>blog post aims</i></b> to do. This blog post does <b><i>NOT</i></b> explain what happened at Cosyne 2022. If you want to see what happened go to: <a href="https://saberatalukder.com/cosyne_2022_computational_and_systems_neuroscience_resources.html" target="_blank">Cosyne 2022 Resources</a>. This post <b><i>IS</i></b> about clarifying the trends that transcend model animal, experiment vs. computation, and so many more of our field's dichotomies. These thoughts are my attempt at synthesizing not only where we currently stand as a field and community, but also where we hope to go.
 
         <br><br>
 
-        &emsp; When I started this endeavor of identifying trends I wanted to see all the talk titles together. No authors. No institutions. Just titles. I wanted to put myself into Laura and Tim's (the organizers') minds and envision what they wanted us to get out of Cosyne 2022. So, I did just that. Before reading this post, I challenge you to look at <a href="https://saberatalukder.com/cosyne_2022_computational_and_systems_neuroscience_resources.html" target="_blank">my list</a> and see what trends you generate! It'll help you at the end of this post I promise 😁
+        &emsp; When I started this endeavor of identifying trends I wanted to see all the talk titles together. No authors. No institutions. Just titles. I wanted to put myself into Laura's and Tim's (the organizers') minds and envision what they wanted us to get out of Cosyne 2022. So, I did just that. Before reading this post, I challenge you to look at <a href="https://saberatalukder.com/cosyne_2022_computational_and_systems_neuroscience_resources.html" target="_blank">my list</a> and see what trends you generate! It'll help you at the end of this post, I promise 😁
 
         <br><br>
         &emsp; With that backdrop, let's get started!! I identified eight 😱 trends; they are:
@@ -153,7 +153,7 @@
         <ul>
         ✦ Behavior
         <br>
-        ✦ Comparing artificial neural networks to (dare I say) real neural networks 😉
+        ✦ Comparing Artificial Neural Networks to (dare I say) Real Neural Networks 😉
         <br>
         ✦ Opportunities in Dimensionality Reduction
         <br>
@@ -204,7 +204,7 @@
 
         <br>
 
-        &emsp; There were many subfields of behavior that were addressed but one I want to dig into is pose tracking. There were many, many, many examples discussed throughout the talks, posters, and hallways of Cosyne 2022.
+        &emsp; There were many subfields of behavior that were addressed, but one I want to dig into is pose tracking. There were many, many, many examples discussed throughout the talks, posters, and hallways of Cosyne 2022.
         <br><br>
         <div class="col-lg-11 text-center" style=" margin-left:55px;">
           <p class='image-right'>
@@ -222,13 +222,13 @@
           <li><a href="https://sleap.ai/" target="_blank">SLEAP - Social LEAP Estimates Animal Poses</a></li>
         </ul>
 
-        &emsp; When so many repositories exist to perform very similar tasks, and suffer from very similar hurdles (multi-animal tracking, the data annotation bottleneck, pose-tracking stability over time, etc.) I can't help but wonder if as a community we should stop and ask ourselves if (1) we can go further by building on top of one another's models and more importantly repositories and (2) we can do a better job of leveraging advances from the deep learning community.
+        &emsp; When so many repositories exist to perform very similar tasks, and suffer from very similar hurdles (multi-animal tracking, the data annotation bottleneck, pose-tracking stability over time, etc.) I can't help but wonder if as a community we should stop and ask ourselves if (1) we can go further by building on top of one another's models and more importantly repositories, and (2) we can do a better job of leveraging advances from the deep learning community.
 
         <br><br>
         <hr style="width:90%; height:4px;">
         <br>
 
-        <h3><b><i>2 -</i> Comparing artificial neural networks to (dare I say) real neural networks 😉</b></h3>
+        <h3><b><i>2 -</i> Comparing Artificial Neural Networks to (dare I say) Real Neural Networks 😉</b></h3>
         <br>
         &emsp; I know, I know, I'm being cheeky! But, I have to motivate you through this post somehow 🤓 This area of research was incredibly well represented at Cosyne 2022, but it took numerous forms; I'm going to highlight a few that encapsulate the main directions.
         <br><br>
@@ -254,7 +254,7 @@
         </div>
         <br>
 
-        &emsp; The third is <i><b>mixing biological mechanisms with artificial tasks</b></i>. The MNIST digit dataset and classification task are cannonical in machine learning. When we use biological mechanisms (like saccading) to solve classic artificial tasks (like digit classification) we move to an exciting hybrid space where we can analyze both artificial and biological systems with the same metrics.
+        &emsp; The third is <i><b>mixing biological mechanisms with artificial tasks</b></i>. The MNIST digit dataset and classification task are canonical in machine learning. When we use biological mechanisms (like saccading) to solve classic artificial tasks (like digit classification) we move to an exciting hybrid space where we can analyze both artificial and biological systems with the same metrics.
 
         <br><br>
         <div class="col-lg-11 text-center" style=" margin-left:55px;">
@@ -266,7 +266,7 @@
         </div>
         <br>
 
-        &emsp; Speaking of metrics... the last category is <i><b> similarity metrics between neural networks</b></i>. Wow, it's almost like somebody planned that 😃 Defining metrics that allow us to quantify similarity or disimilarity is crucial for sound comparisons between artificial and biological networks (or even biological to biological, and artificial to artificial). Notice the feedforward neural network and mouse brain beside one another in the slide below!! If this sings to you 🎶, check out the next section: <i><b>Opportunities in Dimensionality Reduction</b></i>.
+        &emsp; Speaking of metrics... the last category is <i><b> similarity metrics between neural networks</b></i>. Wow, it's almost like somebody planned that 😃 Defining metrics that allow us to quantify similarity or dissimilarity is crucial for sound comparisons between artificial and biological networks (or even biological to biological, and artificial to artificial). Notice the feedforward neural network and mouse brain beside one another in the slide below!! If this sings to you 🎶, check out the next section: <i><b>Opportunities in Dimensionality Reduction</b></i>.
 
         <br><br>
         <div class="col-lg-11 text-center" style=" margin-left:55px;">
@@ -289,7 +289,7 @@
         </div>
         <br>
 
-        &emsp; Tough to go wrong with Sir Mix-a-Lot, but at this point you might be asking yourself: "Sabera, you said dimesionality reduction not big data! What gives?". What gives is that big data is often high dimensional!
+        &emsp; Tough to go wrong with Sir Mix-a-Lot, but at this point you might be asking yourself: "Sabera, you said dimesionality reduction, not big data! What gives?". What gives is that big data is often high dimensional!
 
         <br><br>
         <div class="col-lg-11 text-center" style=" margin-left:55px;">
@@ -331,7 +331,7 @@
                 <p>
             </div>
         </div>
-        &emsp; We are still using PCA, IsoMap, tSNE, UMAP, etc. for biological data because in all honesty preserving local <b><i>AND</i></b> global structure in dimensionality reduced neural data and behavioral data are not solved problems. If you're interested in diving into the complicated world of embeddings I recommend these papers and spicy 🌶️  tweet threads:
+        &emsp; We are still using PCA, IsoMap, tSNE, UMAP, etc. for biological data because in all honesty, preserving local <b><i>AND</i></b> global structure in dimensionality reduced neural data and behavioral data are not solved problems. If you're interested in diving into the complicated world of embeddings, I recommend these papers and spicy 🌶️  tweet threads:
 
         <ul style="margin-left:40px;">
           <li><a href="https://www.biorxiv.org/content/10.1101/2021.08.25.457696v1.full.pdf" target="_blank">The Specious Art of Single-Cell Genomics</a></li>
@@ -340,7 +340,7 @@
           <li><a href="https://twitter.com/lpachter/status/1440695021502545934?lang=en" target="_blank">Tweet Thread</a> - Tl;dr: definitely time to stop making t-SNE & UMAP plots.</li>
         </ul>
 
-        &emsp; There is huge opportunity here to transform the way we do neuroscience if we (1) create better low-dimensionality embeddings, see rastermap in the image above, and (2) develop better metrics for benchmarking nonlinear embeddings. 
+        &emsp; There is a huge opportunity here to transform the way we do neuroscience if we (1) create better low-dimensionality embeddings (see rastermap in the image above), and (2) develop better metrics for benchmarking nonlinear embeddings. 
         <br><br>
         <hr style="width:90%; height:4px;">
         <br>
@@ -386,16 +386,13 @@
           </div>
         </div>
 
-        &emsp; As discussed above in the <b><i>Opportunities in Dimensionality Reduction</i></b> section, we are entering the era of big neural data. Because of our desire as a field to collect larger and larger datasets we are scaling our data collection and processing pipelines with automation and outsourcing.
+        &emsp; As discussed above in the <b><i>Opportunities in Dimensionality Reduction</i></b> section, we are entering the era of big neural data. Because of our desire as a field to collect larger and larger datasets, we are scaling our data collection and processing pipelines with automation and outsourcing.
         <br><br>
         &emsp; Here are a few of the examples I found at Cosyne 2022 which span many animal models:
         <ul style="margin-left:40px;">
           <li>High throughput behavioral training facilities for <b>rats</b>. This allows you to collect over 5.2 million 😱 behavioral trials per year!!</li>
-          <br>
-          <li><a href="https://flywire.ai/" target="_blank">Flywire.ai</a> which is crowdsourcing the first centralized brain wiring diagram in <b>drosophila</b>.</li>
-          <br>
+          <li><a href="https://flywire.ai/" target="_blank">Flywire.ai</a>, which is crowdsourcing the first centralized brain wiring diagram in <b>drosophila</b>.</li>
           <li>Deep learning models to automate everything from cell segmentation, to behavior tracking, to neural data analysis, etc.</li>
-          <br>
           <li><a href="https://www.mturk.com/" target="_blank">Mturk</a>, or Amazon Mechanical Turk. It was used to generate <b>human</b> experimental data at Cosyne 2022. It has also been used in the machine learning community to get human annotations at scale.</li>
         </ul> 
 
