--- a/cosyne_2022_computational_and_systems_neuroscience_resources.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_resources.html
@@ -130,7 +130,7 @@
         <br><br>
         &emsp; <i><b>Who is this blog post for?</b></i> This blog post is for anyone and everyone who wants to learn more about computational neuroscience! This includes (1) people that came to Cosyne and (2) those that couldn't make it; pretty all encompasing I hope 😅
         <br><br>
-        &emsp; Let's get started! I have set up this blog post so that you can re-live or live Cosyne 2022 at three discrete levels of depth. Plese feel empowered to choose your own experience. In order of increasing involvement:
+        &emsp; Let's get started! I have set up this blog post so that you can re-live or live Cosyne 2022 at three discrete levels of depth. Please feel empowered to choose your own experience. In order of increasing involvement:
 
         <br><br>
         <ol>
