--- a/cosyne_2022_computational_and_systems_neuroscience_in_review.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_in_review.html
@@ -204,6 +204,8 @@
 
         <br>
 
+        &emsp; Behavior was heavily discussed at Cosyne 2022 for several reasons: (1) we now have the ability to collect huge amounts of data, see the <b><i>Data Scaling</i></b> section, and (2) it's important for us to analyze as many datastreams as possible to fully describe the scientific phenomenons we observe.
+        <br><br>
         &emsp; There were many subfields of behavior that were addressed, but one I want to dig into is pose tracking. There were many, many, many examples discussed throughout the talks, posters, and hallways of Cosyne 2022.
         <br><br>
         <div class="col-lg-11 text-center" style=" margin-left:55px;">
@@ -254,7 +256,7 @@
         </div>
         <br>
 
-        &emsp; The third is <i><b>mixing biological mechanisms with artificial tasks</b></i>. The MNIST digit dataset and classification task are canonical in machine learning. When we use biological mechanisms (like saccading) to solve classic artificial tasks (like digit classification) we move to an exciting hybrid space where we can analyze both artificial and biological systems with the same metrics.
+        &emsp; The third is <i><b>mixing biological mechanisms with artificial tasks</b></i>. The MNIST digit dataset and classification task are canonical in machine learning. When we use biological mechanisms (like saccading) to solve classic artificial tasks (like digit classification), we move to an exciting hybrid space where we can analyze both artificial and biological systems with the same metrics.
 
         <br><br>
         <div class="col-lg-11 text-center" style=" margin-left:55px;">
