adding ()e to the behavior section

--- a/cosyne_2022_computational_and_systems_neuroscience_in_review.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_in_review.html
@@ -204,7 +204,7 @@
 
         <br>
 
-        &emsp; Behavior was heavily discussed at Cosyne 2022 for several reasons: (1) we now have the ability to collect huge amounts of data, see the <b><i>Data Scaling</i></b> section, and (2) it's important for us to analyze as many datastreams as possible to fully describe the scientific phenomenons we observe.
+        &emsp; Behavior was heavily discussed at Cosyne 2022 for several reasons: (1) we now have the ability to collect huge amounts of data (see the <b><i>Data Scaling</i></b> section), and (2) it's important for us to analyze as many datastreams (neural, behavioral, etc.) as possible to fully describe the scientific phenomenons we observe.
         <br><br>
         &emsp; There were many subfields of behavior that were addressed, but one I want to dig into is pose tracking. There were many, many, many examples discussed throughout the talks, posters, and hallways of Cosyne 2022.
         <br><br>
@@ -397,6 +397,8 @@
           <li>Deep learning models to automate everything from cell segmentation, to behavior tracking, to neural data analysis, etc.</li>
           <li><a href="https://www.mturk.com/" target="_blank">Mturk</a>, or Amazon Mechanical Turk. It was used to generate <b>human</b> experimental data at Cosyne 2022. It has also been used in the machine learning community to get human annotations at scale.</li>
         </ul> 
+
+        &emsp; 
 
         <br>
         <hr style="width:90%; height:4px;">
