--- a/cosyne_2022_computational_and_systems_neuroscience_in_review.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_in_review.html
@@ -277,9 +277,11 @@
             <br>
             From Alex Williams
           </p>
-        </div>
-
+        </div> 
         <br>
+        &emsp; We discussed comparing artificial neural networks to real neural networks through four distinct lenses: (1) 1:1 mapped artificial and biological neural networks, (2) generative modeling, (3) mixing biological mechanisms with artificial tasks, and (4) similarity metrics between neural networks. They are all incredibly interesting directions and I can't wait to see how they evolve at Cosyne 2023!
+
+        <br><br>
         <hr style="width:90%; height:4px;">
         <br>
         <h3><b><i>3 -</i> Opportunities in Dimensionality Reduction</b></h3>
@@ -398,13 +400,13 @@
           <li><a href="https://www.mturk.com/" target="_blank">Mturk</a>, or Amazon Mechanical Turk. It was used to generate <b>human</b> experimental data at Cosyne 2022. It has also been used in the machine learning community to get human annotations at scale.</li>
         </ul> 
 
-        &emsp; 
+        &emsp; Through automation and outsourcing we are pushing the boundaries of neural and behavioral data scaling. As we progress, I hope we continue to take inspiration from other research communities that have explored solutions to these important problems.
 
         <br>
         <hr style="width:90%; height:4px;">
         <br>
 
-        &emsp; In true academic form I will leave you with <b><u>Exercises for the Reader</u></b>. These exercises are trends I identified and collected examples for from Cosyne 2022. I will share what I gathered with you, but there is a catch 😏 I would love for you to <a href="https://twitter.com/SaberaTalukder", target="_blank">join the conversation</a> and tell me what trends you identified! Once you do, I will gladly give you examples from any and all of the topics below!
+        &emsp; In true academic form I will leave you with <b><u>Exercises for the Reader</u></b>. These exercises are trends I identified and collected examples for from Cosyne 2022. I will share what I gathered with you, but there is a catch 😏 I would love for you to join the conversation so that we can build out examples for these topics together. Interested in how you can join the conversations? Click Below! 
         <br><br>
         &emsp; Before I leave you, to synthesize your own trends I'm sure 😅, I want to thank <a href="https://twitter.com/george_m_barnum" target="_blank">George Barnum</a> for helping me more eloquently verbalize my thoughts during earlier versions of this post! I also want thank you for sticking around to the end! I hope you learned something 🤗
 
