adding twitter links

--- a/cosyne_2022_computational_and_systems_neuroscience_in_review.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_in_review.html
@@ -344,7 +344,7 @@
           <li><a href="https://twitter.com/lpachter/status/1440695021502545934?lang=en" target="_blank">Tweet Thread</a> - Tl;dr: definitely time to stop making t-SNE & UMAP plots.</li>
         </ul>
 
-        &emsp; There is a huge opportunity here to transform the way we do neuroscience if we (1) create better low-dimensionality embeddings (see rastermap in the image above), and (2) develop better metrics for benchmarking nonlinear embeddings. 
+        &emsp; There is a huge opportunity here to transform the way we do neuroscience if we: (1) create better low-dimensionality embeddings (see rastermap in the image above), and (2) develop better metrics for benchmarking nonlinear embeddings. 
         <br><br>
         <hr style="width:90%; height:4px;">
         <br>
@@ -402,24 +402,32 @@
 
         &emsp; Through automation and outsourcing we are pushing the boundaries of neural and behavioral data scaling. As we progress, I hope we continue to take inspiration from other research communities that have explored solutions to these important problems.
 
-        <br>
+        <br><br>
         <hr style="width:90%; height:4px;">
         <br>
 
-        &emsp; In true academic form I will leave you with <b><u>Exercises for the Reader</u></b>. These exercises are trends I identified and collected examples for from Cosyne 2022. I will share what I gathered with you, but there is a catch 😏 I would love for you to join the conversation so that we can build out examples for these topics together. Interested in how you can join the conversations? Click Below! 
+        &emsp; In true academic form I will leave you with <b><u>Exercises for the Reader</u></b>. These exercises are trends I identified and collected examples for from Cosyne 2022. I will share what I gathered with you, but there is a catch 😏 I would love for you to join the conversation, so that we can build out examples for these topics together. Interested in how you can join the conversations? Click Below! 
         <br><br>
-        &emsp; Before I leave you, to synthesize your own trends I'm sure 😅, I want to thank <a href="https://twitter.com/george_m_barnum" target="_blank">George Barnum</a> for helping me more eloquently verbalize my thoughts during earlier versions of this post! I also want thank you for sticking around to the end! I hope you learned something 🤗
+        &emsp; Before I leave you, to synthesize our trends I hope 😅, I want to thank <a href="https://twitter.com/george_m_barnum" target="_blank">George Barnum</a> for helping me more eloquently verbalize my thoughts during earlier versions of this post! I also want thank you for sticking around to the end! I hope you learned something 🤗
 
         <br><br>
 
         <h1><b><u>Exercises for the Reader</u></b></h1>
         &emsp; <h3><b><i>5 -</i> Single Units ➡️ Population Level</b></h3>
+        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 5!</a>
+        <br>
 
         &emsp; <h3><b><i>6 -</i> Machine Learning for Computational Neuroscience Lags</b></h3>
+        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 6!</a>
+        <br>
         
         &emsp; <h3><b><i>7 -</i> Model Interpretability</b></h3>
+        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 7!</a>
+        <br>
         
         &emsp; <h3><b><i>8 -</i> Attractors</b></h3>
+        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 8!</a>
+        <br>
 
       <br>
       <hr style="width:90%; height:4px;">
