adding live twitter links

--- a/cosyne_2022_computational_and_systems_neuroscience_in_review.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_in_review.html
@@ -414,19 +414,19 @@
 
         <h1><b><u>Exercises for the Reader</u></b></h1>
         &emsp; <h3><b><i>5 -</i> Single Units ➡️ Population Level</b></h3>
-        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 5!</a>
+        &emsp; &emsp; <a href="https://twitter.com/SaberaTalukder/status/1507182348735025158" target="_blank">Join the Conversation for Topic 5!</a>
         <br>
 
         &emsp; <h3><b><i>6 -</i> Machine Learning for Computational Neuroscience Lags</b></h3>
-        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 6!</a>
+        &emsp; &emsp; <a href="https://twitter.com/SaberaTalukder/status/1507182447506644997" target="_blank">Join the Conversation for Topic 6!</a>
         <br>
         
         &emsp; <h3><b><i>7 -</i> Model Interpretability</b></h3>
-        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 7!</a>
+        &emsp; &emsp; <a href="https://twitter.com/SaberaTalukder/status/1507182516385501189" target="_blank">Join the Conversation for Topic 7!</a>
         <br>
         
         &emsp; <h3><b><i>8 -</i> Attractors</b></h3>
-        &emsp; &emsp; <a href="" target="_blank">Join the Conversation for Topic 8!</a>
+        &emsp; &emsp; <a href="https://twitter.com/SaberaTalukder/status/1507182594538016775" target="_blank">Join the Conversation for Topic 8!</a>
         <br>
 
       <br>
