adding chen post to the blog page

--- a/blog.html
+++ b/blog.html
@@ -118,6 +118,28 @@
           <hr style="width:90%; height:4px; margin-left:32px;">
           <br>
           <ul style="list-style-type:none; margin-top: 20px;">
+
+            <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
+                  <img src="assets/img/blog_imgs/chen_datasai_2022/chen_datasai_pic.jpeg" alt="Sabera Talukder Caltech Chen Data Science and Artificial Intelligence Summer School 2022" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="chen_datasai_2022.html" target="_blank" alight="left" style="color:black;"><b>Resources - ChenDataSAI 2022</b></a><a style="font-size:16px;"> | September 2022</a></h4>
+                  <div class="text-left">
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b style="color:white;">AI</b></button>
+                    <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff;"><b style="color:white;">Neuroscience</b></button>
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b style="color:white;">Neuroengineering</b></button>
+                  </div>
+                  <br>
+                  The 2022-2023 school year starts for many this week! 🤓 With the start of a new school year, I wanted to collect all the resources we created for Caltech's inaugural Chen DataSAI Summer School for anyone interested in easily learning AI...
+                  
+                </div>
+              </div>
+              <br> <br>
+            </li>
+
             <li>
               <div class="row">
                 <div class="col-sm-3 text-left"> 
