adding the neurips 2022 post to the blog home page

--- a/blog.html
+++ b/blog.html
@@ -119,6 +119,27 @@
           <br>
           <ul style="list-style-type:none; margin-top: 20px;">
 
+          <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
+                  <img src="assets/img/blog_imgs/neurips_2022/bourbon_street_neurips.jpg" alt="Sabera Talukder NeurIPS 2022" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="neurips_2022.html" target="_blank" alight="left" style="color:black;"><b>NeurIPS 2022 - Papers that Piqued</b></a><a style="font-size:16px;"> | December 2022</a></h4>
+                  <div class="text-left">
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b style="color:white;">AI</b></button>
+                    <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600;"><b style="color:white;">Tech</b></button>
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b style="color:white;">Neuroengineering</b></button>
+                  </div>
+                  <br>
+                  NeurIPS x New Orleans ended yesterday 😢 closing out an in person & virtual deep learning whirlwind! Before I dive in, I'm going to share some 👍 2022 NeurIPS factoids. Let's go! At NeurIPS 2022 out of the 9,634 submitted papers, 2,672 were...
+                  
+                </div>
+              </div>
+              <br> <br>
+            </li>
+
             <li>
               <div class="row">
                 <div class="col-sm-3 text-left"> 
