making links visible from home page

--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,45 @@
           <li>
               <div class="row">
                 <div class="col-sm-3 text-left"> 
+                  <img src="assets/img/blog_imgs/cosyne_2023/trends_pics/trends_base.jpeg" alt="Sabera Talukder Cosyne 2023" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="cosyne_2023_computational_and_systems_neuroscience_trends.html" target="_blank" alight="left" style="color:black;"><b>Trends | Cosyne 2023</b></a><a style="font-size:16px;"> | March 2023</a></h4>
+                  <div class="text-left">
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b style="color:white;">AI</b></button>
+                    <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff;"><b style="color:white;">Neuroscience</b></button>
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b style="color:white;">Neuroengineering</b></button>
+                  </div>
+                  <br>
+                  Trends here, trends there, trends everywhere! Cosyne 2023 was packed full of superb science, and because drinking straight from a firehose for six straight days is impractical 😅 I'm going distill everything we just witnessed into a few key themes 🤓
+                </div>
+              </div>
+              <br> <br>
+            </li>
+
+          <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
+                  <img src="assets/img/blog_imgs/cosyne_2023/resources_pics/resources_base.jpeg" alt="Sabera Talukder Cosyne 2023" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="cosyne_2023_computational_and_systems_neuroscience_resources.html" target="_blank" alight="left" style="color:black;"><b>Resources | Cosyne 2023</b></a><a style="font-size:16px;"> | March 2023</a></h4>
+                  <div class="text-left">
+                    <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff;"><b style="color:white;">Neuroscience</b></button>
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b style="color:white;">Neuroengineering</b></button>
+                  </div>
+                  <br>
+                  Cosyne 2023, it's a wrap!! What a fantastic meeting in Montreal, with some seriously amazing computational & systems neuroscience 😍🧠 There was so much information that it would be next to impossible to intake and process it all in six days, which is why I'm writting this resource 🤗
+                </div>
+              </div>
+              <br> <br>
+            </li>
+
+          <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
                   <img src="assets/img/blog_imgs/neurips_2022/bourbon_street_neurips.jpg" alt="Sabera Talukder NeurIPS 2022" style="max-width:100%; max-height:100%; border-radius: 10%;">
                 </div>
 
