--- a/cosyne_2023_computational_and_systems_neuroscience_trends.html
+++ b/cosyne_2023_computational_and_systems_neuroscience_trends.html
@@ -18,7 +18,7 @@
     <meta name="twitter:creator" content="@SaberaTalukder">
     <meta name="twitter:title" content="Trends | Cosyne 2023">
     <meta name="twitter:description" content="...">
-    <meta name="twitter:image" content="https://saberatalukder.com/assets/img/blog_imgs/cosyne_2022/cosyne_2022_header.jpg">
+    <meta name="twitter:image" content="https://saberatalukder.com/assets/img/blog_imgs/cosyne_2023/trends_pics/trends_base.jpeg">
 
 
   <meta charset="utf-8">
