updating home file

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/SaberaTalukder" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="mailto:sabera.j.talukder@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
-          <a href="https://scholar.google.com/citations?user=S00bhfIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar"><i class="bx bxs-graduation"></i></a>
+          <a href="https://scholar.google.com/citations?user=krfsglIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar"><i class="bx bxs-graduation"></i></a>
           <a href="Sabera_Talukder_Resume_For_Website_2022.pdf" target="_blank" class="resume"><i class="bx bx-file-blank"></i></a>
           <a href="https://www.linkedin.com/in/sabera-talukder-69600bb1/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -87,31 +87,29 @@
 
   <!-- ======= Hero Section ======= -->
   <!-- <section id="about" class="about"> -->
-  	<div class="row">
-	    <div class="col-lg-7" style="margin-top: 50px; margin-left: 15px;">
-	      <h1>Welcome!</h1>
-	      <p style="font-size: 20px;">
-	      <br>
-	      My name is Sabera Talukder and I am a National Science Foundation Graduate Fellow, <a href="https://neuroscience.caltech.edu/people/sabera-talukder" target="_blank">Chen Graduate Fellow</a>, and PhD candidate at Caltech working with Professor <a href="http://www.yisongyue.com/group.php" target="_blank">Yisong Yue</a>.
-	      <br>
-	      <br>
-	      My research is in the burgeoning field of <a href="https://saberatalukder.com/what_is_neuroengineering.html" target="_blank">neuroengineering</a>, where I combine deep learning and invasive human neural data to create models that generalize across patients.
-		  <br>
-	      <br>
-	      Previously, I was a software engineer at the Chan Zuckerberg Biohub where I led the <a href="https://saberatalukder.com/biohub_neuroengineering_symposium_papers.html" target="_blank">neuroengineering efforts</a>. Before that, I double majored at Stanford University with honors in both <a href="https://ee-archive.stanford.edu/spotlight/sabera-talukder" target="_blank">electrical engineering</a> and biochemistry.
-	      <br>
-	      <br>
-	      Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
-	    </div>
-	    <div class="col-lg-5" style="margin-left: -15px;">
-	    	<img src="assets/img/Sabera_Talukder_chen_institute_caltech_long.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" style="max-width:100%;max-height:100%;">  
-	    </div>
-	<!-- </div>
-	<div class="row">
-	<div class="col-lg-12" style="margin-top: 80px; margin-left: 10px; margin-right: 10px;">
-	    	<img src="assets/img/bangladesh copy.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" style="max-width:100%;max-height:100%;">  
-	    </div>
-	</div> -->
+    <div class="row">
+      <div class="col-lg-7" style="margin-top: 50px; margin-left: 15px;">
+        <h1>Welcome!</h1>
+        <p style="font-size: 20px;">
+        <br>
+        My name is Sabera Talukder and I build time series foundation models!
+        <br><br>
+        I am a National Science Foundation Graduate Fellow, Chen Graduate Fellow, and PhD candidate at Caltech working with Professors <a href="TODO add me" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a>. I am also currently serving as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee.
+        <br><br>
+        Previously, I was a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects at Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both <a href=" TODO fix me https://ee-archive.stanford.edu/spotlight/sabera-talukder" target="_blank">electrical engineering</a> and biochemistry.
+        <br>
+        <br>
+        Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
+      </div>
+      <div class="col-lg-5" style="margin-left: -15px;">
+        <img src="assets/img/Sabera_Talukder_chen_institute_caltech_long.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" style="max-width:100%;max-height:100%;">  
+      </div>
+  <!-- </div>
+  <div class="row">
+  <div class="col-lg-12" style="margin-top: 80px; margin-left: 10px; margin-right: 10px;">
+        <img src="assets/img/bangladesh copy.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" style="max-width:100%;max-height:100%;">  
+      </div>
+  </div> -->
   <!-- </section> -->
 
   
