home and resume

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         <br>
         My name is Sabera Talukder and I build time series foundation models!
         <br><br>
-        I am a National Science Foundation Graduate Fellow, Chen Graduate Fellow, and PhD candidate at Caltech working with Professors <a href="TODO add me" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a>. I am also currently serving as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee.
+        I am a National Science Foundation Graduate Fellow, Chen Graduate Fellow, and PhD candidate at Caltech working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a>. I am also currently serving as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee.
         <br><br>
-        Previously, I was a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects at Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both <a href=" TODO fix me https://ee-archive.stanford.edu/spotlight/sabera-talukder" target="_blank">electrical engineering</a> and biochemistry.
+        Previously, I was a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects at Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br>
         <br>
         Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
